--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,18 @@ form {
   gap: 1rem;
 }
 
+/* For chrome, Safari, Edge, Opera : */
+form input::-webkit-outer-spin-button,
+form input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* For firefox : */
+form input[type=number] {
+  -moz-appearance: textfield;
+}
+
 form div {
   display: flex;
   flex-direction: column;
