--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(109.6deg, rgba(112, 246, 255, 0.33) 11.2%, rgba(221, 108, 241, 0.26) 42%, rgba(229, 106, 253, 0.71) 71.5%, rgba(123, 183, 253, 1) 100.2%);
+  color: #fff;
+  background-image: linear-gradient(130deg, rgba(10, 10, 10, 1) 15%, rgba(28, 68, 134, 0.9) 55%, rgba(64, 105, 160, 0.85) 90%);
 }
 
 .container {
@@ -74,7 +75,7 @@ input {
   border: none;
 }
 
-.btn-outline {
+.btn-reset {
   background-color: #fff;
   color: #0077EE;
 }
@@ -85,4 +86,16 @@ input {
 
 p {
   margin: 10px 0;
+}
+
+input {
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  color: #ffffff;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+input::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+  /* Semi-transparent white */
 }
